--- a/roles/ansible-hugepages/tasks/main.yml
+++ b/roles/ansible-hugepages/tasks/main.yml
@@ -85,7 +85,7 @@
   notify:
     - update grub config
 
--- name: Add configuration to Azure GRUB - 2M
+- name: Add configuration to Azure GRUB - 2M
   lineinfile:
     path: "/etc/default/grub.d/50-cloudimg-settings.cfg"
     regexp: '^GRUB_CMDLINE_LINUX_DEFAULT='
@@ -105,7 +105,7 @@
   notify:
     - update grub config
 
--- name: Change MLOCK hard limits
+- name: Change MLOCK hard limits
   lineinfile:
     path: /etc/security/limits.conf
     regexp: '^\*[ \t]+hard[ \t]+memlock'
